<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6200ED"
            android:fontFamily="@font/alegreya_sans_bold"
            android:gravity="center_horizontal"
            android:text="@string/user_guide_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/guide_description"
            android:textColor="#252323"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_description2"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>


        <ImageView
            android:id="@+id/homepage"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:src="@drawable/homepage"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_1"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1_description"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>


        <ImageView
            android:id="@+id/sensor_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/sensorpage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_1.1"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1.1_description"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/temp_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/temperaturepage" />

        <ImageView
            android:id="@+id/temp_saved_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/temperaturesaved" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_1.2"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1.2_description"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/motion_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/accelerometerpage" />

        <ImageView
            android:id="@+id/motion_saved_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/accelerometersaved" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_2"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2_description"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/availablesensor"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/availablesensors" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_3"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title3_description"
            android:fontFamily="sans-serif"
            android:textColor="#252323"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/device_info_page"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/deviceinfopage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conclusion"
            android:fontFamily="@font/lato_bold"
            android:textColor="#252323"
            android:textSize="19sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SensApp"
            android:fontFamily="@font/lato_bold"
            android:textColor="#252323"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>



    </LinearLayout>

</ScrollView>
