<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="438dp"
        android:layout_height="70dp"
        android:background="#6200ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="438dp"
        android:layout_height="70dp"
        android:background="#6200ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="367dp"
        android:layout_height="613dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintBottom_toBottomOf="@+id/phoneinformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mainlogo" />

    <Button
        android:id="@+id/availablesensors"
        android:layout_width="263dp"
        android:layout_height="61dp"
        android:background="#6200ED"
        android:fontFamily="@font/lato_black"
        android:text="@string/btn_sensor"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/userguide"
        android:layout_width="263dp"
        android:layout_height="61dp"
        android:background="#6200ED"
        android:fontFamily="@font/lato_black"
        android:text="@string/btn_guide"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <Button
        android:id="@+id/sensor"
        android:layout_width="263dp"
        android:layout_height="61dp"
        android:background="#6200ED"
        android:fontFamily="@font/lato_black"
        android:text="@string/btn_sensors"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/phoneinformation"
        android:layout_width="263dp"
        android:layout_height="61dp"
        android:background="#6200ED"
        android:fontFamily="@font/lato_black"
        android:text="@string/btn_information"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        app:strokeColor="#DDDDDD" />

</androidx.constraintlayout.widget.ConstraintLayout>

